[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
cargo-watch = "8.5.2"
tokio = "1.37.0"

[dev-dependencies]
reqwest = "*"
